syntax = "proto3";

package apps.v1;
option go_package = "apps.v1;apps";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service AppsService {
  // CRUD приложений
  rpc Create(CreateRequest) returns (App);
  rpc Get(GetRequest) returns (App);
  rpc Update(UpdateRequest) returns (App);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  rpc List(ListRequest) returns (ListResponse);

  // Управление ключами
  rpc GenerateSecretKey(GenerateSecretKeyRequest) returns (SecretKeyResponse);
  rpc RotateSecretKey(RotateSecretKeyRequest) returns (SecretKeyResponse);
  rpc RevokeSecretKey(RevokeSecretKeyRequest) returns (RevokeSecretKeyResponse);
  rpc GetKeyRotationHistory(GetKeyRotationHistoryRequest) returns (KeyRotationHistoryResponse);
}

// Модели данных
message App {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
  string created_by = 6;
  bool is_active = 7;
  map<string, string> metadata = 8;
}

message SecretKeyResponse {
  string app_id = 1;
  string secret_key = 2;
  google.protobuf.Timestamp generated_at = 3;
}

// Запросы и ответы
message CreateRequest {
  string name = 1;
  string description = 2;
  string created_by = 3;
  map<string, string> metadata = 4;
}

message GetRequest {
  string app_id = 1;
}

message UpdateRequest {
  string app_id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.BoolValue is_active = 4;
  map<string, string> metadata = 5;
}

message DeleteRequest {
  string app_id = 1;
  string deleted_by = 2;
}

message DeleteResponse {
  bool success = 1;
  google.protobuf.Timestamp deleted_at = 2;
}

message ListRequest {
  int32 limit = 1;
  int32 offset = 2;
  google.protobuf.StringValue name_filter = 3;
  google.protobuf.BoolValue active_only = 4;
}

message GenerateSecretKeyRequest {
  string app_id = 1;
  string generated_by = 2;
  google.protobuf.Int32Value key_length = 3;
}

message RevokeSecretKeyRequest {
  string app_id = 1;
  string revoked_by = 2;
  bool regenerate = 3;
}

message RevokeSecretKeyResponse {
  bool success = 1;
  google.protobuf.StringValue new_key = 2;
  google.protobuf.Timestamp revoked_at = 3;
}

message RotateSecretKeyRequest {
  string app_id = 1;
  string rotated_by = 2;
  bool invalidate_previous = 3;
}

message ListResponse {
  repeated App data = 1;
  int32 total_count = 2;
}

message KeyRotationRecord {
  string id = 1;
  string app_id = 2;
  google.protobuf.Timestamp rotated_at = 3;
  string rotated_by = 4;
}

message GetKeyRotationHistoryRequest {
  string app_id = 1;
  google.protobuf.Int32Value limit = 2;
}

message KeyRotationHistoryResponse {
  repeated KeyRotationRecord data = 1;
}